removed unicodecsv from requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-Django==1.8
+Django==1.8.2
+MySQL-python==1.2.3
+SQLAlchemy==1.0.6
+argparse==1.2.1
 dj-database-url==0.3.0
 dj-static==0.0.6
-django-pdb==0.4.2
+django-postgrespool==0.3.0
 django-toolbelt==0.0.1
-gunicorn==19.3.0
+gunicorn==19.1.0
 psycopg2==2.6.1
-static3==0.6.1
-unicodecsv==0.13.0
 virtualenv==13.0.3
-unicodecsv==0.13.0
+whitenoise==2.0
