--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,6 @@ django-postgrespool==0.3.0
 django-toolbelt==0.0.1
 gunicorn==19.1.0
 psycopg2==2.6.1
+unicodecsv==0.13.0
 virtualenv==13.0.3
 whitenoise==2.0
