--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.8.2
 MySQL-python==1.2.3
 SQLAlchemy==1.0.6
 argparse==1.2.1
+beautifulsoup4==4.4.0
 dj-database-url==0.3.0
 dj-static==0.0.6
 django-postgrespool==0.3.0
